--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
     "axios": "^1.3.0",
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-telegram-bot-api": "^0.66.0"
   },
   "engines": {
     "node": ">=14.0.0"
   }
 }
-
