--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "body-parser": "^1.20.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "node-telegram-bot-api": "^0.66.0"
+    "fs": "^0.0.1-security",
+    "node-telegram-bot-api": "^0.66.0",
+    "path": "^0.12.7"
   },
   "engines": {
     "node": ">=14.0.0"
